Внесение правок после ревью